// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Render Nav Test 1`] = `
" <button class="button-nav prev" slot="extra" title="" disabled="">
			
	<svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" fill="none" viewBox="0 0 6 10">
		<path stroke="currentColor" stroke-linecap="round" d="m1 9 4-4-4-4"></path>
	</svg>

		</button>
		<button class="button-nav next" slot="extra" title="" disabled="">
			
	<svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" fill="none" viewBox="0 0 6 10">
		<path stroke="currentColor" stroke-linecap="round" d="m1 9 4-4-4-4"></path>
	</svg>

		</button>"
`;

exports[`Render Nav With Callbacks 1`] = `
"
             <button class="button-nav prev" slot="extra" title="">
			
	<svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" fill="none" viewBox="0 0 6 10">
		<path stroke="currentColor" stroke-linecap="round" d="m1 9 4-4-4-4"></path>
	</svg>

		</button>
		<button class="button-nav next" slot="extra" title="">
			
	<svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" fill="none" viewBox="0 0 6 10">
		<path stroke="currentColor" stroke-linecap="round" d="m1 9 4-4-4-4"></path>
	</svg>

		</button>
        "
`;

exports[`Render Pagination Test 1`] = `
"
             <div class="tabn-pagination">
		<button class="button-page page-prev" title="">
			
	<svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" fill="none" viewBox="0 0 6 10">
		<path stroke="currentColor" stroke-linecap="round" d="m1 9 4-4-4-4"></path>
	</svg>

		</button>
		<button class="button-page page-next" title="">
			
	<svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" fill="none" viewBox="0 0 6 10">
		<path stroke="currentColor" stroke-linecap="round" d="m1 9 4-4-4-4"></path>
	</svg>

		</button>
	</div>
        "
`;
